--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Basic Diary</string>
     <string name="action_settings">Settings</string>
+    <string name="action_delete">Delete</string>
+    <string name="action_sort">Sort</string>
     <string name="title_activity_browse">Browse Activity</string>
     <string name="title_activity_edit">Edit Activity</string>
 </resources>
